[package]
name = "raw_tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.14.1"
rlp = "0.5.2"
sha3 = "0.10.1"
rand = "0.8.4"
hex = "0.4.3"
fawkes-crypto-keccak256 = "0.1.1"
ethers = "2.0.7"
secp256k1 = "0.27.0"
ethereum-tx-sign = "6.1.2"
serde = "1.0.164"
serde_derive = "1.0.164"
bytes = "1.4.0"
data-encoding = "2.4.0"
tiny-keccak = "2.0.2"
web3-rpc = "0.1.10"
serde_json = "1.0.96"
tokio = "1.28.2"
anyhow = "1.0.71"
num-bigint = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
async-recursion = "1.0.4"
dotenv = "0.15.0"
